@@ -1,5 +1,7 @@
 2.4.8
 
+* simplified the name of plugins modules and classes, and pluginsmanagement code accordingly
+
 2.4.7 
 
 * port number in case of submit plugin CondorOSGCE not hardcoded. But default is still 9619
